# cyber-task

./: .gitignore  README.md  compose.yaml
client/: .dockerignore  Dockerfile  attack.py  pyproject.toml
client/src/: main.py
reverse-proxy/: Dockerfile  pyproject.toml
reverse-proxy/src/: conf.py  db.py  detector.py  forwarder.py  main.py
server/: Dockerfile  pyproject.toml
server/src/: auth.py  conf.py  db.py  main.py
